melhoria start.sh
start.sh
  adicionando parametro opcional para copiar o schema do banco de dados
  laço while com ifs para verificar e validar os parametros posicionais
  agora  a ordem dos parametros(-d e -s) nao faz diferença
  sh ./start.sh -d -s   # copia o schema e faz o download do servidor
  sh ./start.sh -s -d   # copia o schema e faz o download do servidor
  sh ./start.sh -s      # copia o schema
  sh ./start.sh -d      # faz o download do servidor
  sh ./start.sh         # espera servidor e schema em otserver/server

login.php
  databaseNAme alterado para refletir o valor de SERVER_NAME de start.sh
  lembrando que essa alteraçao é feita de forma automatica

compose.yaml
  ajustando algumas variaveis de ambiente do mysql

--- a/compose.yaml
+++ b/compose.yaml
@@ -7,11 +7,10 @@ services:
     restart: on-failure
     command: --default-authentication-plugin=mysql_native_password
     environment:
+      MYSQL_DATABASE: ${DATABASE_NAME}    
       MYSQL_USER: ${DATABASE_USER}
       MYSQL_PASSWORD: ${DATABASE_PASSWORD}
-      MYSQL_DATABASE: ${DATABASE_NAME}
-      MYSQL_ALLOW_EMPTY_PASSWORD: true
-      MYSQL_ROOT_HOST: '%'
+      MYSQL_ROOT_PASSWORD: noob
     networks:
       - otserver
     ports:
@@ -45,7 +44,9 @@ services:
     environment:
       PMA_HOST: mysql-svc
       PMA_PORT: 3306
-      MYSQL_ROOT_PASSWORD: noob
+      MYSQL_USER: ${DATABASE_USER}
+      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
+      MYSQL_ROOT_PASSWORD: noob      
     networks:
       - otserver
     ports:
