compatibilidade com server compilado da main
docker-compose.yaml
  - alteração necessaria para iniciar o servidor que foi compilado
    da branch main do repositorio canary

schema.sql
  - alteracoes no schema sao referentes as atualizaçoes
    do repositório do servidor canary

login.php
  - adicionados mais logs para facilitar o debug

README.md
  - melhorias na escrita e ajuste de typos

server/
  - readicionando a pasta server com README.md
    ela foi excluida em algum moment:wq

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@ server/*
 !README.md
 
 site/00_resquestBody.json
-site/01_responseBody.json
+site/01_account.json
+site/02_characters.json
+site/03_session_key.json
+site/04_responseBody.json
 
 .ngrok_token
 
