melhorando login.php
login.php
  - Agora as informações do banco de dados são obtidas a partir de
    variaveis de ambiente.
    Essas variaveis de ambiente são declaradas em 'start.sh' e
    fornecidas para o container por meio do 'compose.yaml'.

compose.yaml
  - Definindo as variaveis de ambiente do container 'php-svc'. Os
    valores dessas variaveis de ambiente estão no 'start.sh'.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 server/*
 !README.md
 
-site/00_resquestBody.json
+site/00_resquest_body.json
 site/01_account.json
 site/02_characters.json
 site/03_session_key.json
-site/04_responseBody.json
+site/04_response_body.json
 
 .ngrok_token
 
