Passando configurações para o config.lua
compose.yaml
  - Passando configurações do banco de dados e endereço IP do servidor
    para o container 'server' através de variáveis de ambiente.
  - Variáveis de ambiente adicionadas no container 'server', o valor
    dessas variáveis são definidos no arquivo start.sh.

start.sh
  - Removendo linha que excluía o arquivo 'config.lua'.
  - Removendo linhas de comando 'sed' que faziam as configurações do
    banco de dados e endereço IP no arquivo 'config.lua'.

config.lua
  - Adicionando chamadas ao os.getenv() para obter os valores das
    variáveis de ambiente que configuram o banco de dados e endereço IP
    do servidor.

--- a/compose.yaml
+++ b/compose.yaml
@@ -32,6 +32,12 @@ services:
         apt install libgomp1 && \
         ./canary
       "
+    environment:
+      DOCKER_NETWORK_GATEWAY_ENV: ${DOCKER_NETWORK_GATEWAY}
+      SERVER_NAME_ENV: ${SERVER_NAME}
+      DATABASE_NAME_ENV: ${DATABASE_NAME}
+      DATABASE_USER_ENV: ${DATABASE_USER}
+      DATABASE_PASSWORD_ENV: ${DATABASE_PASSWORD}      
     networks:
       - otserver
     ports:
